--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/app.ts",
   "scripts": {
-    "dev": "nodemon ."
+    "gen": "ts-node src/app"
   },
   "keywords": [],
   "author": "",
@@ -12,13 +12,8 @@
   "devDependencies": {
     "@types/node": "^18.6.1",
     "nodemon": "^2.0.19",
-    "openapi-typescript": "^5.4.1",
-    "openapi-typescript-codegen": "^0.23.0",
-    "swagger-typescript-api": "^9.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
-  "dependencies": {
-    "openapi3-ts": "^2.0.2"
-  }
+  "dependencies": {}
 }
